<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline1"
        app:layout_constraintGuide_percent="0.2"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline2"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline3"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline4"
        app:layout_constraintGuide_percent="0.45"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline5"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline6"
        app:layout_constraintGuide_percent="0.55"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline7"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline8"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline9"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horz_guideline10"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert_guideline1"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vert_guideline2"
        app:layout_constraintGuide_percent="0.7"
        android:orientation="vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_lifecycle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_run"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entire_life"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oncreate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onstart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onresume"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onpause"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline6"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onstop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline7"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onrestart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ondestroy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline1"
        app:layout_constraintTop_toBottomOf="@id/horz_guideline9"
        />


    <EditText
        android:id="@+id/responseEditText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline3"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline4"
        />

    <EditText
        android:id="@+id/responseEditText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline4"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline5"
        />

    <EditText
        android:id="@+id/responseEditText13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resume1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline5"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline6"
        />

    <EditText
        android:id="@+id/responseEditText14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pause1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline6"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline7"
        />

    <EditText
        android:id="@+id/responseEditText15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/stop1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline7"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline8"
        />

    <EditText
        android:id="@+id/responseEditText16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/restart1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline8"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline9"
        />

    <EditText
        android:id="@+id/responseEditText17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destroy1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/vert_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline9"
        app:layout_constraintBottom_toTopOf="@id/horz_guideline10"
        />

    <EditText
        android:id="@+id/responseEditText21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/create2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline3"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline4"
        />

    <EditText
        android:id="@+id/responseEditText22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline4"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline5"
        />

    <EditText
        android:id="@+id/responseEditText23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/resume2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline5"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline6"
        />

    <EditText
        android:id="@+id/responseEditText24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pause2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline6"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline7"
        />

    <EditText
        android:id="@+id/responseEditText25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/stop2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline7"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline8"
        />

    <EditText
        android:id="@+id/responseEditText26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/restart2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline8"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline9"
        />

    <EditText
        android:id="@+id/responseEditText27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/destroy2"
        app:layout_constraintLeft_toLeftOf="@id/vert_guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horz_guideline9"
        app:layout_constraintBottom_toTopOf="@+id/horz_guideline10"
        />



</androidx.constraintlayout.widget.ConstraintLayout>